# cruet

./: CONTRIBUTING.md  Cargo.toml  README.md  typos.toml
.github/workflows/: format.yml  release.yml  typos.yml
src/: lib.rs
src/case/: camel.rs  class.rs  kebab.rs  mod.rs  pascal.rs  screaming_snake.rs  sentence.rs  snake.rs  table.rs  title.rs  train.rs
src/number/: deordinalize.rs  ordinalize.rs
src/string/: constants.rs  deconstantize.rs  demodulize.rs  mod.rs  pluralize.rs  singularize.rs
src/suffix/: foreign_key.rs  mod.rs
tests/: lib.rs
