[package]
name = "cruet"
version = "0.15.0"
authors = ["Josh Teeter<joshteeter@gmail.com>", "Chrislearn Young<chris@sonc.ai>"]
edition = "2024"
rust-version = "1.89"
include = ["**/*.rs", "Cargo.toml", "README.md"]
readme = "README.md"
repository = "https://github.com/taidge/cruet"
documentation = "https://docs.rs/cruet"
homepage = "https://github.com/taidge/cruet"
license = "BSD-2-Clause"
description = """
Adds String based inflections for Rust. Snake, kebab, camel, sentence, class, title and table cases as well as ordinalize, deordinalize, demodulize, foreign key, and pluralize/singularize are supported as both traits and pure functions acting on String types.
"""
keywords = ["pluralize", "camel", "snake", "Inflector", "inflection"]
categories = ["text-processing", "value-formatting"]

[lib]
name = "cruet"

[dependencies]
regex = { version = "1" }
